--- a/app/views/bug_reports/edit.html.erb
+++ b/app/views/bug_reports/edit.html.erb
@@ -1,5 +1,35 @@
 <h1>Edit Bug Report</h1>
 
-<%= render partial: "form", locals: {bug_report: @bug_report} %>
+<%= form_with model: @bug_report do |form| %>
+   <% if form.object.errors.any? %>
+    <div>
+        <% form.object.errors.full_messages.each do |message| %>
+        <div><%= message %> </div>
+        <% end %>
+    </div>
+    <br/>
+   <% end %>
+   <div>
+        <%= form.label :title %>
+        <br/>
+        <%= form.text_field :title%>
+    </div>
+    <br/>
+    <div>
+        <%= form.label :summary %>
+        <br/>
+        <%= form.text_area :summary %>
+    </div>
+    <div>
+        <br/>
+        <%= form.label :status %>
+        <br/>
+        <%= form.radio_button :status, "Open" %> Open
+        <%= form.radio_button :status, "Closed" %> Closed
+    </div>
+    <br/>
+    
+    <%= form.button%>
+<% end %>
 <br/>
 <%= button_to "Delete", @bug_report, method: :delete, data: {turbo_confirm: "Are you sure you want to delete this bug report?"} %>
