--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,17 +11,34 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
+    <style>
+      body { color: white}
+      * {background-color: 	rgb(32,32,32)}
+      button {color:white; background-color: gray}
+      a {color: rgb(51, 153, 255)}
+      input {background-color: white}
+      textarea {background-color: white}
+      p {color: rgb(136,136,136)}
+      
+    </style>
+    <p class="notice" style="color:lightgreen"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <div>
+      <h2><%= link_to "View All Bug Reports", root_path %>
       <% if user_signed_in? %>
-      <%= link_to "Profile", edit_user_registration_path %>
-      <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+      <%= link_to "Create Bug Report", new_bug_report_path %>
       <% else %>
-        <%= link_to "Login", new_user_session_path %>
+        <%= link_to "Log In", new_user_session_path %>
         <%= link_to "Sign Up", new_user_registration_path %>
-      <% end %>
+      <% end %></h2>
+      
       </div>
+    <% if user_signed_in? %>
+    <p> <%= link_to "Profile Settings", edit_user_registration_path %></p> 
+    <p>Logged in with: <%= current_user.email %> </p>
+      <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+    
+    <% end %>
     <%= yield %>
   </body>
 </html>
