--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
       </div>
     <% if user_signed_in? %>
     <p> <%= link_to "Profile Settings", edit_user_registration_path %></p> 
-    <p>Logged in with: <%= current_user.email %> </p>
+    <p>Logged in as: <%= current_user.email %> </p>
       <%= button_to "Log out", destroy_user_session_path, method: :delete %>
     
     <% end %>
