--- a/app/views/bug_reports/show.html.erb
+++ b/app/views/bug_reports/show.html.erb
@@ -3,10 +3,12 @@
 <h3>Status: <%= @bug_report.status %></h3>
 <h1><%= @bug_report.title %></h1>
 <% if current_user == @bug_report.user %>
+<p>Report #: <%= @bug_report.id %> </p>
     <p>Created by: <%= @bug_report.user.email %> (You own this)</p>
     <p>Updated at: <%= @bug_report.updated_at%></p>
     <p><%= link_to "Edit your report", edit_bug_report_path %></p>
 <% else %>
+<p>Report #: <%= @bug_report.id %> </p>
      <p>Created by: <%= @bug_report.user.email %> </p>
      <p>Updated at: <%= @bug_report.updated_at%></p>
 <% end %>
