--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,17 @@
       * {background-color: 	rgb(32,32,32)}
       button {color:white; background-color: gray}
       a {color: rgb(51, 153, 255)}
+      a:hover {opacity: 80%}
       input {background-color: white}
       textarea {background-color: white}
       p {color: rgb(136,136,136)}
+      .report {background-color:rgb(61, 61, 61);
+       border-radius: 7px;word-wrap: break-word;
+       width: 50%; min-width: 100px; padding: 10px; text-align:left; max-width: 800px; margin:auto}
+       .reports {margin:auto; text-align: center}
+       .title {word-wrap: break-word;
+       border-radius: 7px;
+       width: 50%; min-width: 100px; ; text-align:left; max-width: 800px; margin:auto}
       
     </style>
     <p class="notice" style="color:lightgreen"><%= notice %></p>
