--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,53 @@
  *= require_tree .
  *= require_self
  */
+body {
+  color: white;
+}
+* {
+  background-color: rgb(31, 31, 31);
+  font-family: Arial !important;
+}
+button {
+  color: white;
+  background-color: gray;
+}
+a {
+  color: rgb(51, 153, 255);
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  opacity: 80%;
+  text-decoration: underline;
+}
+input {
+  background-color: white;
+}
+textarea {
+  background-color: white;
+}
+p {
+  color: rgb(136, 136, 136);
+}
+.report {
+  background-color: rgb(21, 21, 21);
+  border-radius: 7px;
+  word-wrap: break-word;
+  width: 50%;
+  min-width: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: left;
+  max-width: 800px;
+  padding-bottom: 10px;
+  padding-top: 5px;
+  margin: auto;
+  color: lightgray;
+  margin-bottom: 40px;
+  border: 1px solid rgb(125, 125, 125);
+}
+.reports {
+  margin: auto;
+  text-align: center;
+}
