--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bugs</title>
+    <title>Bug Library</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,21 +12,7 @@
 
   <body>
     <style>
-      body { color: white;}
-      * {background-color: 	rgb(31, 31, 31); font-family: Arial !important;}
-      button {color:white; background-color: gray}
-      a {color: rgb(51, 153, 255); background-color:transparent; text-decoration: none;}
-      a:hover {opacity: 80%; text-decoration:underline}
-      input {background-color: white}
-      textarea {background-color: white}
-      p {color: rgb(136,136,136)}
-      .report {background-color:rgb(21, 21, 21);
-       border-radius: 7px;word-wrap: break-word;
-       width: 50%; min-width: 100px; padding-left: 10px; 
-       padding-right: 10px; text-align:left; max-width: 800px; 
-       padding-bottom: 10px;padding-top: 5px;  margin:auto; color:lightgray; margin-bottom:40px;  border:1px solid rgb(125, 125, 125);}
-       .reports {margin:auto; text-align: center}
-       
+      
        .h2title {background-color:rgb(21, 21, 21); margin-top:5px}
       
     </style>
