--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       
     </style>
     <p class="notice" style="color:lightgreen"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="alert" style="color:red"><%= alert %></p>
     <div>
       <h2><%= link_to "Bug Library", root_path %>
       <% if user_signed_in? %>
