--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,8 +21,8 @@ body {
   font-family: Arial !important;
 }
 button {
-  color: white;
-  background-color: gray;
+  color: black;
+  background-color: rgb(236, 236, 236);
 }
 a {
   color: rgb(51, 153, 255);
@@ -34,20 +34,24 @@ a:hover {
   text-decoration: underline;
 }
 input {
-  background-color: white;
+  background-color: rgb(236, 236, 236);
 }
 textarea {
-  background-color: white;
+  background-color: rgb(236, 236, 236);
 }
 p {
   color: rgb(136, 136, 136);
+}
+p.status {
+  color: rgb(136, 136, 136);
+  background-color: transparent;
 }
 .report {
   background-color: rgb(21, 21, 21);
   border-radius: 7px;
   word-wrap: break-word;
   width: 50%;
-  min-width: 100px;
+  min-width: 800px;
   padding-left: 10px;
   padding-right: 10px;
   text-align: left;
@@ -59,7 +63,122 @@ p {
   margin-bottom: 40px;
   border: 1px solid rgb(125, 125, 125);
 }
+.report p {
+  background-color: transparent;
+}
 .reports {
   margin: auto;
   text-align: center;
+}
+.report.closed {
+  border: 1px solid red;
+  opacity: 60%;
+}
+.comment {
+  border: 1px solid lightgray;
+}
+.singlereport {
+  background-color: rgb(21, 21, 21);
+  border-radius: 7px;
+  word-wrap: break-word;
+  width: 50%;
+  min-width: 800px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: left;
+  max-width: 800px;
+  padding-bottom: 10px;
+  padding-top: 5px;
+  margin: auto;
+  color: lightgray;
+  margin-bottom: 40px;
+  border: 1px solid rgb(125, 125, 125);
+}
+.singlereport p {
+  background-color: transparent;
+}
+.singlereport h3 {
+  background-color: transparent;
+}
+.singlereport h1 {
+  background-color: transparent;
+}
+.commentblock {
+  background-color: rgb(21, 21, 21);
+  border-radius: 7px;
+  word-wrap: break-word;
+  width: 50%;
+  min-width: 800px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: left;
+  max-width: 800px;
+  padding-bottom: 10px;
+  padding-top: 5px;
+  margin: auto;
+  color: lightgray;
+  margin-bottom: 40px;
+  border: 1px solid rgb(125, 125, 125);
+}
+.commentblock h3 {
+  background-color: transparent;
+}
+.commentblock textarea {
+  resize: none;
+  width: 100%;
+}
+.commentformtop {
+  border-radius: 7px;
+  word-wrap: break-word;
+  width: 50%;
+  min-width: 700px;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: left;
+  max-width: 700px;
+  padding-bottom: 10px;
+  padding-top: 5px;
+  margin: auto;
+  color: lightgray;
+  margin-bottom: 40px;
+  background-color: transparent;
+}
+.field label {
+  background-color: none;
+}
+.eachcommentholder {
+  background-color: transparent;
+  min-width: 700px;
+  margin: auto;
+  width: 700px;
+}
+.eachcommentholder h3 {
+  background-color: transparent;
+}
+.commentform {
+  background-color: transparent;
+}
+.form {
+  background-color: transparent;
+}
+.field {
+  background-color: transparent;
+}
+.actions {
+  background-color: transparent;
+}
+.comment {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  min-width: 700px;
+  max-width: 700px;
+  border-radius: 7px;
+  margin: auto;
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+.comment small {
+  opacity: 50%;
+  font-size: 13px;
 }
