--- a/app/views/bug_reports/show.html.erb
+++ b/app/views/bug_reports/show.html.erb
@@ -52,7 +52,8 @@
     </div>
 <%end%>
 <%else%>
-<p>You must be logged in to add comments.</p>
+<div class="commentformtop">
+<p style="background-color:transparent">You must be logged in to add comments.</p>
 <%end%>
 </div>
 
