fixed form labels

--- a/app/views/bug_reports/edit.html.erb
+++ b/app/views/bug_reports/edit.html.erb
@@ -10,13 +10,13 @@
     <br/>
    <% end %>
    <div>
-        <%= form.label :title %>
+        <%= form.label "Type of Bug:" %>
         <br/>
         <%= form.text_field :title%>
     </div>
     <br/>
     <div>
-        <%= form.label :summary %>
+        <%= form.label "Description of Bug:" %>
         <br/>
         <%= form.text_area :summary %>
     </div>
